fix sonar findings across services, security, and tests